# diarize-light

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/diarizelight/: __init__.py  clustering.py  embeddings.py  utils.py  vad.py
